--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URL= mongodb+srv://admin-sudip:test123@cluster0.97c0b.mongodb.net/DachroDB
+MONGO_URL= mongodb+srv://admin-sudip:test123@cluster0.97c0b.mongodb.net/DachroDB?retryWrites=true&w=majority
